--- a/frontend/src/components/Textarea/styles.scss
+++ b/frontend/src/components/Textarea/styles.scss
@@ -1,4 +1,4 @@
-@import '../../app/theme';
+@import '../../theme';
 
 .textarea {
   position: relative;
@@ -30,7 +30,6 @@
     color: #909090;
     cursor: auto;
   }
-
 
   textarea {
     font-family: 'Roboto', sans-serif;
