fix: Поправил стили для textarea

--- a/frontend/src/components/Textarea/styles.scss
+++ b/frontend/src/components/Textarea/styles.scss
@@ -40,7 +40,7 @@
     padding: 15px 15px 13px;
     box-sizing: border-box;
     font-size: 16px;
-    resize: vertical;
+    resize: none;
 
     border-radius: 0;
     -webkit-appearance: none;
