--- a/frontend/src/components/Page/styles.scss
+++ b/frontend/src/components/Page/styles.scss
@@ -14,7 +14,7 @@
       &:before {
         display: block;
         content: ' ';
-        background-image: url('../../images/loader.svg');
+        background-image: url('../../resources/images/loader.svg');
         background-size: 60px 60px;
         height: 60px;
         width: 60px;
