--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -21,3 +21,6 @@ $button-color-grey: $color1;
 
 $input-border-color: #f2f2f2;
 $input-border-color-hover: $color1;
+
+$ValidationMessage--color: #bd1d1d;
+$ValidationMessage-active--color: #941111;
