--- a/frontend/src/components/EditableInput/styles.scss
+++ b/frontend/src/components/EditableInput/styles.scss
@@ -19,7 +19,7 @@
   margin-right: 5px;
 
   &:after {
-    content: ":";
+    content: ':';
   }
 }
 
@@ -29,7 +29,7 @@
   position: relative;
 
   &:after {
-    content: url("../../resources/images/edit.svg");
+    content: url('../../resources/images/edit.svg');
     display: inline-block;
     margin-left: 5px;
     margin-top: 3px;
