--- a/frontend/src/components/EditableInput/styles.scss
+++ b/frontend/src/components/EditableInput/styles.scss
@@ -3,18 +3,18 @@
   position: relative;
 }
 
-.EditableInput_View {
+.EditableInput-View {
   display: block;
   position: relative;
 }
 
-.EditableInput_ViewContent {
+.EditableInput-ViewContent {
   display: block;
   position: relative;
-  margin-right: 45px;
+  margin-right: 90px;
 }
 
-.EditableInput_NameLabel {
+.EditableInput-NameLabel {
   font-weight: bold;
   margin-right: 5px;
 
@@ -23,7 +23,7 @@
   }
 }
 
-.EditableInput_ValueLabel {
+.EditableInput-ValueLabel {
   cursor: pointer;
   border-bottom: 1px dashed black;
   position: relative;
@@ -37,25 +37,25 @@
   }
 }
 
-.EditableInput_Edit {
+.EditableInput-Edit {
   display: block;
 }
 
-.EditableInput_ValueEdit {
+.EditableInput-ValueEdit {
   margin-right: 98px;
 }
 
-.EditableInput_ShowViewButton,
-.EditableInput_ApplyButton {
+.EditableInput-ShowViewButton,
+.EditableInput-ApplyButton {
   width: 49px;
   position: absolute;
   top: 0;
 }
 
-.EditableInput_ShowViewButton {
+.EditableInput-ShowViewButton {
   right: 0;
 }
 
-.EditableInput_ApplyButton {
+.EditableInput-ApplyButton {
   right: 49px;
 }
