--- a/frontend/src/components/Form/styles.scss
+++ b/frontend/src/components/Form/styles.scss
@@ -23,6 +23,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    flex-direction: row-reverse;
     margin-left: -10px;
     margin-right: -10px;
     margin-bottom: -15px;
