feat: Игра. Установка/Смена пин-кода. Кнопка Отмены должна быть снизу
#N15

--- a/frontend/src/components/Modal/styles.scss
+++ b/frontend/src/components/Modal/styles.scss
@@ -49,6 +49,7 @@
       padding: 10px;
 
       display: flex;
+      flex-direction: row-reverse;
       flex-wrap: wrap;
       justify-content: space-between;
       margin-left: -5px;
