--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,7 +8,7 @@ html,
   margin: 0;
   padding: 0;
   height: 100%;
-  background: $body-background;
+  background: $backgroundColor;
   min-width: 320px;
 }
 
