--- a/frontend/src/components/FieldView/styles.scss
+++ b/frontend/src/components/FieldView/styles.scss
@@ -1,3 +1,5 @@
+@import '../../theme';
+
 .FieldView {
   display: block;
   position: relative;
@@ -16,6 +18,7 @@
   &-NameLabel {
     font-weight: bold;
     margin-right: 5px;
+    color: $mainTextColor;
 
     &:after {
       content: ':';
@@ -24,9 +27,10 @@
 
   &-ValueLabel {
     position: relative;
+    color: $mainTextColor;
 
     &-empty {
-      color: #909090;
+      color: $emptyTextColor;
     }
   }
 }
