--- a/frontend/src/components/Form/styles.scss
+++ b/frontend/src/components/Form/styles.scss
@@ -5,7 +5,7 @@
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   min-width: 300px;
 
-  background: $form-background;
+  background: $formBackgroundColor;
   padding: 20px;
 
   @media screen and (max-width: 400px) {
