--- a/frontend/src/components/Textarea/styles.scss
+++ b/frontend/src/components/Textarea/styles.scss
@@ -15,7 +15,7 @@
 
       transform: scale(0.5) translate(0, -30px);
       font-weight: bold;
-      color: #505050;
+      color: lighten($mainTextColor, 25);
     }
   }
 
@@ -27,20 +27,21 @@
     font-size: 16px;
     top: 16px;
     left: 16px;
-    color: #909090;
+    color: lighten($mainTextColor, 30);
     cursor: auto;
   }
 
   textarea {
     font-family: 'Roboto', sans-serif;
     outline: 0;
-    background: #f2f2f2;
+    background: $editBackgroundColor;
     width: 100%;
-    border: 1px solid $input-border-color;
+    border: 1px solid $editBorderColor;
     padding: 15px 15px 13px;
     box-sizing: border-box;
     font-size: 16px;
     resize: none;
+    color: $mainTextColor;
 
     border-radius: 0;
     -webkit-appearance: none;
@@ -48,7 +49,7 @@
     &:hover,
     &:active,
     &:focus {
-      border: 1px solid $input-border-color-hover;
+      border: 1px solid $mainActionColor;
     }
   }
 }
