fix: Поправить иконки и цвета на сайте
#N30

--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -1,13 +1,13 @@
-$mainActionColor: #b3141c;
-$mainActionTextColor: #FFFFFF;
+$mainActionColor: #bb010b;
+$mainActionTextColor: #faf8f8;
 $secondActionColor: #DEDEDE;
-$secondActionTextColor: #981b22;
+$secondActionTextColor: #bb010b;
 
-$backgroundColor: #554183;
-$formBackgroundColor: #FFFFFF;
+$backgroundColor: #006f57;
+$formBackgroundColor: #faf8f8;
 
-$mainTextColor: #1F1F1F;
-$emptyTextColor: #909090;
+$mainTextColor: #4c191b;
+$emptyTextColor: #866769;
 $errorTextColor: #E00018;
 $secondTextColor: #F1EDE2;
 
