--- a/frontend/src/components/EditableInput/styles.scss
+++ b/frontend/src/components/EditableInput/styles.scss
@@ -27,7 +27,7 @@
 
 .EditableInput-ValueLabel {
   cursor: pointer;
-  border-bottom: 1px dashed $mainTextColor;;
+  border-bottom: 1px dashed $mainTextColor;
   position: relative;
   color: $mainTextColor;
 }
