--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -1,6 +1,6 @@
 $mainActionColor: #bb010b;
 $mainActionTextColor: #faf8f8;
-$secondActionColor: #DEDEDE;
+$secondActionColor: #dedede;
 $secondActionTextColor: #bb010b;
 
 $backgroundColor: #006f57;
@@ -8,11 +8,11 @@ $formBackgroundColor: #faf8f8;
 
 $mainTextColor: #4c191b;
 $emptyTextColor: #866769;
-$errorTextColor: #E00018;
-$secondTextColor: #F1EDE2;
+$errorTextColor: #e00018;
+$secondTextColor: #f1ede2;
 
-$editBackgroundColor: #F2F2F2;
-$editBorderColor: #F2F2F2;
+$editBackgroundColor: #f2f2f2;
+$editBorderColor: #f2f2f2;
 
-$alertBackgroundColor: #F2E8CF;
-$alertTextColor: #F2E8CF;
+$alertBackgroundColor: #4c191b;
+$alertTextColor: #f1ede2;
