--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -12,6 +12,16 @@ html,
   min-width: 320px;
 }
 
+#particles-js {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 0;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu',
