--- a/frontend/src/components/List/styles.scss
+++ b/frontend/src/components/List/styles.scss
@@ -21,6 +21,7 @@
   }
 
   .list-item {
+    position: relative;
     background: $backgroundColor;
     color: $secondTextColor;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
@@ -29,6 +30,8 @@
     border-top: 1px dashed rgba($formBackgroundColor, 0.3);
     overflow-wrap: break-word;
     word-break: break-word;
+    display: flex;
+    justify-content: space-between;
 
     &.selected {
       background: darken($backgroundColor, 7);
@@ -38,12 +41,19 @@
           background: darken($backgroundColor, 7);
         }
       }
+      .ListItemAction {
+        display: inline-block;
+      }
     }
 
     &:hover {
       background: darken($backgroundColor, 5);
       transition: 0.1s all ease;
       padding-left: 20px;
+
+      .ListItemAction {
+        display: inline-block;
+      }
     }
 
     &:first-child {
@@ -60,5 +70,13 @@
         background: darken($backgroundColor, 5);
       }
     }
+  }
+
+  .ListItemAction {
+    cursor: pointer;
+    display: none;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.78);
+    white-space: nowrap;
+    margin-left: 10px;
   }
 }
