--- a/frontend/src/components/FormInput/styles.scss
+++ b/frontend/src/components/FormInput/styles.scss
@@ -78,6 +78,7 @@
     font-size: 16px;
     box-shadow: 0 2px 5px 0 rgba(black, 0.2);
     color: $mainTextColor;
+    margin: 0;
 
     border-radius: 0;
     -webkit-appearance: none;
