--- a/frontend/src/components/FormButton/styles.scss
+++ b/frontend/src/components/FormButton/styles.scss
@@ -11,6 +11,7 @@
     @mixin button($background: $mainActionColor, $color: $mainActionTextColor) {
       background: $background;
       color: $color;
+      margin: 0;
 
       &:hover,
       &:focus {
