--- a/frontend/src/components/Textarea/Textarea.styles.scss
+++ b/frontend/src/components/Textarea/Textarea.styles.scss
@@ -13,7 +13,16 @@
       position: absolute;
       transition: all 0.1s;
 
-      transform: scale(0.5) translate(0, -30px);
+      padding-left: 6px;
+      padding-right: 6px;
+      background: linear-gradient(
+        0deg,
+        rgba(242, 242, 242, 1) 0%,
+        rgba(242, 242, 242, 1) 45%,
+        rgba(255, 255, 255, 0) 45%,
+        rgba(250, 248, 248, 0) 100%
+      );
+      transform: scale(0.8) translate(0, -33px);
       font-weight: bold;
       color: lighten($mainTextColor, 25);
     }
